fix: Wrap the title words and set font size

--- a/components/PlayerBig.module.scss
+++ b/components/PlayerBig.module.scss
@@ -33,6 +33,11 @@
   }
 }
 
+.title {
+  font-size: 24px;
+  word-wrap: break-word;
+}
+
 .metadata {
   color: #8e8e8e;
   padding: 0;
